Adicionando imagem ao arquivo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Seção de Destaque -->
     <section id="destaque">
-        <img src="imagem-evento.jpg" alt="Imagem do Evento">
+        <img src="imagens/imagem.png" alt="Imagem do Evento">
         <div class="descricao">
             <p>Plataforma desenvolvida com o objetivo de conectar
                 pessoas ao Mercado de Trabalho de forma simplificada.
