Última edição no arquivo

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <label for="telefone">Telefone:</label>
             <input type="tel" id="telefone" name="telefone" required="Insira seu telefone.">
 
-            <button type="submit">Quero Participar</button>
+            <button type="submit" class="botao">Quero Participar</button>
         </form>
     </section>
 
